--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -170,7 +170,8 @@
 .dwnCertificateIcon.active,
 .homeIcon.active,
 .treeIcon.active {
-  filter: invert(67%) sepia(64%) saturate(388%) hue-rotate(52deg) brightness(93%) contrast(85%);
+  filter: invert(67%) sepia(64%) saturate(388%) hue-rotate(52deg)
+    brightness(93%) contrast(85%);
 }
 
 .navbar-nav .nav-link.active,
@@ -245,7 +246,8 @@
   background-repeat: no-repeat;
   width: 50px;
   height: 30px;
-  filter: invert(94%) sepia(0%) saturate(7475%) hue-rotate(79deg) brightness(112%) contrast(105%);
+  filter: invert(94%) sepia(0%) saturate(7475%) hue-rotate(79deg)
+    brightness(112%) contrast(105%);
   background-size: contain;
   background-position: left;
 }
@@ -317,12 +319,16 @@
 form input[type="text"],
 input[type="number"],
 input[type="password"] {
-  background: #fff;
+  background: rgb(255 255 255 / 18%); /* soft transparent */
+  /* backdrop-filter: blur(8px) saturate(180%);
+  -webkit-backdrop-filter: blur(8px) saturate(180%); */
   width: 80%;
-  border-radius: 30px;
-  color: #0b673b;
-  font-size: 14px;
+  border-radius: 10px;
+  border: 0.2px solid #ffffff;
+  color: #ffffff;
+  font-size: 13px;
   text-align: left;
+  text-transform: unset;
   padding: 15px;
   margin: 0px 0 7px 0;
   font-family: "Volvo Novum-Regular", sans-serif !important;
@@ -356,7 +362,7 @@ form .fileInput label {
 }
 
 input::placeholder {
-  color: #0b673b;
+  color: white;
   opacity: 1;
 }
 
@@ -449,7 +455,8 @@ form .uploadFileError {
   height: 20px;
   transform: scale(1.2);
   padding: 12px;
-  filter: invert(100%) sepia(52%) saturate(0%) hue-rotate(20deg) brightness(113%) contrast(101%);
+  filter: invert(100%) sepia(52%) saturate(0%) hue-rotate(20deg)
+    brightness(113%) contrast(101%);
   position: relative;
   top: 16px;
   left: 20px;
@@ -461,8 +468,9 @@ form .uploadFileError {
   color: white;
   padding: 12px;
   background: rgba(255, 255, 255, 0.12); /* soft transparent */
-  backdrop-filter: blur(8px) saturate(180%);
-  -webkit-backdrop-filter: blur(8px) saturate(180%);
+  background: rgba(255, 255, 255, 0.24);
+  /* backdrop-filter: blur(8px) saturate(180%);
+  -webkit-backdrop-filter: blur(8px) saturate(180%); */
   border-radius: 18px;
   /* border: 1px solid rgba(255, 255, 255, 0.25); */
 }
@@ -767,6 +775,12 @@ form .uploadFileError {
 
   .howtoprtcptImg {
     width: 120px;
+  }
+}
+
+@media (min-width: 1500px) {
+  .cstmContainer {
+    margin-top: 150px !important;
   }
 }
 
