--- a/src/app/vehicle/pledge-now-ev/page.module.css
+++ b/src/app/vehicle/pledge-now-ev/page.module.css
@@ -1,7 +1,8 @@
 .btnPledge {
   width: 250px;
-  background-color: #fff;
-  color: #000;
+  background: rgb(255 255 255 / 18%);
+  border: none;
+  color: white;
   font-size: 14px;
   height: 40px;
   text-transform: uppercase;
